test/libyul/yulSyntaxTests/invalid/clash_with_builtin_name.yul
{
    function loadimmutable(setimmutable) -> datasize {}
    let dataoffset
}
// ----
// ParserError 5568: (15-28): Cannot use builtin function name "loadimmutable" as identifier name.
